# clean-architectures-examples

./: README.md
buckpal/._git/: config  index  packed-refs
clean-architecture-go-master/: README.md
clean-architecture-go-master/golang/: Dockerfile.prod  README.md  go.mod  go.sum  test.db
clean-architecture-go-master/kafka/: docker-compose.yaml
clean-architecture-go-master/nestjs/: Dockerfile  docker-compose.yaml  package-lock.json  package.json
cpp_microservice/: .gitignore  CMakeLists.txt  README.md
cpp_microservice/._git/: config  index  packed-refs
cpp_microservice/._git/logs/: HEAD
cpp_microservice/._git/objects/pack/: pack-071c7c3d08eb065ec9f353d90e1d8f0cb20ebf1a.idx  pack-071c7c3d08eb065ec9f353d90e1d8f0cb20ebf1a.pack
cpp_microservice/._git/refs/heads/: main
cpp_microservice/src/: App.cpp  AppComponent.hpp  SLModules.cpp
cpp_microservice/src/adapters/controllers/: UserController.cpp  UserController.hpp
cpp_microservice/src/adapters/controllers/dto/: DTOs.hpp
cpp_microservice/src/adapters/repositories/: UserRepositoryImpl.cpp
cpp_microservice/src/core/domain/: User.cpp
cpp_microservice/src/core/ports/: UserRepository.cpp  UserUseCase.cpp
cpp_microservice/src/core/services/: UserService.cpp
go-clean-arch-mongo-master/: .gitignore  Insomnia_2020-07-21.json  README.md  config.yaml  cover.out  go.mod  go.sum
go-websocket-sandbox-master/: Dockerfile  Makefile  README.md  config.yaml.ci  config.yaml.example  go.mod  go.sum  main.go  test.sh
kotlin-backend-skeleton/: build.gradle.kts  gradle.properties  settings.gradle.kts
(+158 files in other folders)
